adding some copy

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -39,17 +39,17 @@
             <div class="background">
                 <h2>What we do, and where we came from</h2>
 
-                <p> We are a group of developers and designers coming together to work with women's empowerment programs around the world to buid and teach digital literacy curriculum.</p>
+                <p> We are a group of developers, designers, and technologists coming together to work with women's empowerment programs around the world to build and teach digital literacy skills.</p>
                 <p>In 2013, we met hundreds of women in Nairobi, Kenya  who helped us understand the uses of technology and the spread
                     of
                     entrepreneurship in the developing world. We worked with
                     <a href="http://www.muthaafoundation.org/" target="_blank">MCDF</a> to put on the
-                    <a href="http://www.kubmo.org/" target="_blank">Biz Tech Workshop</a> in Nairobi. We have now partnered with
+                    <a href="http://www.kubmo.org/" target="_blank">Biz Tech Workshop</a> in Nairobi. We are now partnering with
                     <a href="http://www.thevisionarianetwork.org/" target="_blank">The Visionaria Network</a>
                     to build a digital literacy program for young women in Cusco, Peru. </p>
-                    <p> We see technical skills as an important aspect of women's empowerment. Every day, we live the gender divide in tech start ups in the United States. We believe education is the avenue to solve the problem and want to bring that to as many women around the globe as possible. Diversity can only be achieved when cultures from around the world come together to teach each other skills that we depend on for our futures and can empower ourselves econmoically.</p>
+                    <p> Technical skills, education, and a network of female leaders will lead to a strong global community of women in technology. There is a clear gender divide in the tech world. But we believe a skill-based education is an avenue to solve the problem, and want to bring that to as many women around the globe as possible.</p>
 
-                <p> If you are a women's empowerment program or interested in volunteering with us, please send us a message below or via any of our social media channels.</p>
+                <p> If you are interested in working with us, or supporting us, please send a message below or contact us on any of our social media channels.</p>
             </div>
         </div>
     </div>
