--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -7,6 +7,8 @@ body {
   background-color: #F3EBEB
 }
 
+
+
 .container {
   background-color: #ffffff;
   box-shadow: 0px 1px 5px #888888;
@@ -23,6 +25,11 @@ body {
   img {
     width: 464px;
     height: 130px;
+  }
+
+  p {
+    max-width: 880px;
+    margin: 0 auto;
   }
 }
 
