Change email address

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -95,7 +95,7 @@
 </div>
 <div class="footer">
     <h3>Send us a message, we'd love to chat!</h3>
-    <a href="mailto:kinseyann505@gmail.com"><img src="img/email.png" alt="email" height="50" width="50"></a>
+    <a href="mailto:team@kubmo.builders"><img src="img/email.png" alt="email" height="50" width="50"></a>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
