--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -74,7 +74,8 @@ body {
         margin-top: 35px;
         line-height:60px;
         width: 700px;
-        padding: 30px;
+        padding-right: 30px;
+//        margin-right: 15px;
       }
     }
   }
