Adding new link and one pager to site

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,98 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
 
-    <title>Kubmo Builders</title>
+  <title>Kubmo Builders</title>
 
 </head>
 <body>
 <div class="jumbotron">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="logo">
-                <img src="img/logo_white.png" alt="logo">
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div class="subtitle-container">
-                <div class="subtitle-background"></div>
-                <div class="subtitle-text">
-                    <h1>Growing a Global Community of Women in Technology</h1>
-                </div>
-            </div>
-        </div>
-        <div class="ovals">
-            <a href="https://twitter.com/Kubmo" target="_blank"><img src="img/twitter.png" alt="twitter"></a>
-            <a href="https://www.facebook.com/Kubmo" target="_blank"><img src="img/facebook.png" alt="facebook"></a>
-            <a href="https://www.linkedin.com/company/3014812?trk=tyah&trkInfo=tarId%3A1422928627719%2Ctas%3Akubmo%2Cidx%3A2-1-2" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
-        </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="logo">
+        <img src="img/logo_white.png" alt="logo">
+      </div>
     </div>
+    <div class="col-md-12">
+      <div class="subtitle-container">
+        <div class="subtitle-background"></div>
+        <div class="subtitle-text">
+          <h1>Growing a Global Community of Women in Technology</h1>
+        </div>
+      </div>
+    </div>
+    <div class="ovals">
+      <a href="https://twitter.com/Kubmo" target="_blank"><img src="img/twitter.png" alt="twitter"></a>
+      <a href="https://www.facebook.com/Kubmo" target="_blank"><img src="img/facebook.png" alt="facebook"></a>
+      <a href="https://www.linkedin.com/company/3014812?trk=tyah&trkInfo=tarId%3A1422928627719%2Ctas%3Akubmo%2Cidx%3A2-1-2" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
+    </div>
+  </div>
 </div>
 <div class="container">
-    <div class="row">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="background">
+        <h2>What we do, and where we came from</h2>
+
+        <p> We are a group of developers, designers, and technologists coming together to work with women's empowerment
+          programs around the world to build and teach digital literacy skills.</p>
+
+        <p>In 2013, we met hundreds of women in Nairobi, Kenya who helped us understand the uses of technology and the
+          spread
+          of
+          entrepreneurship in the developing world. We worked with
+          <a href="http://www.muthaafoundation.org/" target="_blank">MCDF</a> to put on the
+          <a href="http://www.kubmo.org/" target="_blank">Biz Tech Workshop</a> in Nairobi. We are now partnering with
+          <a href="http://www.thevisionarianetwork.org/" target="_blank">The Visionaria Network</a>
+          to build a digital literacy program for young women in Cusco, Peru. </p>
+
+        <p> Technical skills, education, and a network of female leaders will lead to a strong global community of women
+          in technology. There is a clear gender divide in the tech world. But we believe a skill-based education is an
+          avenue to solve the problem, and want to bring that to as many women around the globe as possible.</p>
+
+        <p> If you are interested in working with us, or supporting us, please send a message below or contact us on any
+          of our social media channels.</p>
+      </div>
+    </div>
+  </div>
+  <div class="learn-more">
+    <div class="container">
+      <div class="row">
         <div class="col-md-12">
-            <div class="background">
-                <h2>What we do, and where we came from</h2>
-
-                <p> We are a group of developers, designers, and technologists coming together to work with women's empowerment programs around the world to build and teach digital literacy skills.</p>
-                <p>In 2013, we met hundreds of women in Nairobi, Kenya  who helped us understand the uses of technology and the spread
-                    of
-                    entrepreneurship in the developing world. We worked with
-                    <a href="http://www.muthaafoundation.org/" target="_blank">MCDF</a> to put on the
-                    <a href="http://www.kubmo.org/" target="_blank">Biz Tech Workshop</a> in Nairobi. We are now partnering with
-                    <a href="http://www.thevisionarianetwork.org/" target="_blank">The Visionaria Network</a>
-                    to build a digital literacy program for young women in Cusco, Peru. </p>
-                    <p> Technical skills, education, and a network of female leaders will lead to a strong global community of women in technology. There is a clear gender divide in the tech world. But we believe a skill-based education is an avenue to solve the problem, and want to bring that to as many women around the globe as possible.</p>
-
-                <p> If you are interested in working with us, or supporting us, please send a message below or contact us on any of our social media channels.</p>
-            </div>
+          <h4>We are teaching women digital literacy to empower them to create their own businesses, pursue technical
+            careers, and build a network of leaders around the world. Hard skills can unlock the power of
+            independence. </h4>
         </div>
+      </div>
     </div>
-    <div class="row pictures">
-        <div class="col-md-4">
-            <div class="row picture">
-                <div class="col-md-12">
-                    <img src="img/kinsey.png" alt="kinsey">
-                </div>
-                <div class="col-md-12">
-                    <a href="https://twitter.com/KinseyAnnDurham" class="twitter-link" target="_blank">
-                        Kinsey Ann Durham
-                    </a>
-                </div>
-            </div>
-
+  </div>
+  <div class="link">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <%= link_to "Learn more about our curriculum >", "/learn-more.html" %>
         </div>
-        <div class="col-md-4">
-            <div class="row picture">
-                <div class="col-md-12">
-                    <img src="img/emma.png" alt="emma">
-                </div>
-                <div class="col-md-12">
-                    <a href="https://twitter.com/emmalawler24" class="twitter-link" target="_blank">Emma Lawler</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="row picture">
-                <div class="col-md-12">
-                    <img src="img/brooke.png" alt="brooke">
-                </div>
-                <div class="col-md-12">
-                    <a href="https://twitter.com/jbrooke1113" class="twitter-link" target="_blank">Brooke Olson</a>
-                </div>
-            </div>
-
-        </div>
+      </div>
     </div>
+  </div>
+  <div class="row pictures">
+    <div class="col-md-4">
+      <div class="row picture">
+        <div class="col-md-12">
+          <img src="img/kinsey.png" alt="kinsey">
+        </div>
+        <div class="col-md-12">
+          <a href="https://twitter.com/KinseyAnnDurham" class="twitter-link" target="_blank">
+            Kinsey Ann Durham
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-md-4">
+      <div class="row picture">
+        <div class="col-md-12">
+          <img src="img/emma.png" alt="emma">
+        </div>
+        <div class="col-md-12">
+          <a href="https://twitter.com/emmalawler24" class="twitter-link" target="_blank">Emma Lawler</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="row picture">
+        <div class="col-md-12">
+          <img src="img/brooke.png" alt="brooke">
+        </div>
+        <div class="col-md-12">
+          <a href="https://twitter.com/jbrooke1113" class="twitter-link" target="_blank">Brooke Olson</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
 <div class="footer">
-    <h3>Send us a message, we'd love to chat!</h3>
-    <a href="mailto:team@kubmo.builders"><img src="img/email.png" alt="email" height="50" width="50"></a>
+  <h3>Send us a message, we'd love to chat!</h3>
+  <a href="mailto:team@kubmo.builders"><img src="img/email.png" alt="email" height="50" width="50"></a>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
