--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -82,7 +82,6 @@ body {
         line-height:60px;
         width: 700px;
         padding-right: 30px;
-//        margin-right: 15px;
       }
     }
   }
@@ -138,6 +137,35 @@ body {
   }
   a {
     color: #A20E13;
+  }
+}
+
+.learn-more {
+  .container {
+    margin-left: -15px;
+    background-color: #E02323;
+    color: #ffffff;
+    height: 120px;
+  }
+  h4 {
+    padding-top: 15px;
+    margin-left: 120px;
+    margin-right: 120px;
+    line-height: 1.5;
+//    font-size: 28px;
+  }
+}
+
+.link {
+  .container {
+    background-color: #B70000;
+    margin-left: -15px;
+    height: 50px;
+    padding-top: 12px;
+    a {
+      color: #ffffff;
+      font-size: 20px;
+    }
   }
 }
 
