Add one pager to site

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -75,7 +75,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <%= link_to "Learn more about our curriculum >", "/learn-more.html" %>
+          <%= link_to "Learn more about our curriculum >", "/learn-more.pdf" %>
         </div>
       </div>
     </div>
