Minor fixes and compressed images

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="_/img/favicon.png" />
 
   <title>Kubmo Builders</title>
 
@@ -49,7 +50,7 @@
           <a href="http://www.muthaafoundation.org/" target="_blank">MCDF</a> to put on the
           <a href="http://www.kubmo.org/" target="_blank">Biz Tech Workshop</a> in Nairobi. We are now partnering with
           <a href="http://www.thevisionarianetwork.org/" target="_blank">The Visionaria Network</a>
-          to build a digital literacy program for young women in Cusco, Peru. </p>
+          to build a digital literacy program for young women in Cusco, Peru. We are currently accepting donations of old computers for our <%= link_to "Computer Drive", "/kubmo_computer_drive-min.pdf" %> for when we visit Cusco in January.</p>
 
         <p> Technical skills, education, and a network of female leaders will lead to a strong global community of women
           in technology. There is a clear gender divide in the tech world. But we believe a skill-based education is an
@@ -75,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <%= link_to "Learn more about our curriculum >", "/learn-more.pdf" %>
+          <%= link_to "Learn more about our curriculum >", "/learn-more-min.pdf" %>
         </div>
       </div>
     </div>
