Update PDF's and change background color

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <%= link_to "Learn more about our curriculum >", "/learn_more.pdf" %>
+          <%= link_to "Learn more about our curriculum >", "/learn_more.pdf", target: "_blank" %>
         </div>
       </div>
     </div>
