--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -4,10 +4,8 @@ body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   height: 100%;
-  background-color: #F3EBEB;
+  background-color: #ffffff;
 }
-
-
 
 .container {
   background-color: #ffffff;
