--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -4,7 +4,7 @@ body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #F3EBEB;
 }
 
 .container {
