--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,6 +11,7 @@
   <title>Kubmo Builders</title>
 
 </head>
+<div id="nav"></div>
 <body>
 <div class="jumbotron">
   <div class="row">
@@ -40,17 +41,16 @@
       <div class="background">
         <h2>What we do, and where we came from</h2>
 
-        <p> We are a group of developers, designers, and technologists coming together to work with women's empowerment
-          programs around the world to build and teach digital literacy skills.</p>
+        <p> We are a group of technologists working with women's empowerment
+          programs around the world to build and teach digital communication, design, and development.</p>
 
         <p>In 2013, we met hundreds of women in Nairobi, Kenya who helped us understand the uses of technology and the
           spread
           of
           entrepreneurship in the developing world. We worked with
-          <a href="http://www.muthaafoundation.org/" target="_blank">MCDF</a> to put on the
-          <a href="http://www.kubmo.org/" target="_blank">Biz Tech Workshop</a> in Nairobi. We are now partnering with
+          <a href="http://www.muthaafoundation.org/" target="_blank">MCDF</a> to put on a workshop in Nairobi, where each woman received a smartphone, and created a business. This year we partnered with
           <a href="http://www.thevisionarianetwork.org/" target="_blank">The Visionaria Network</a>
-          to build a digital literacy program for young women in Cusco, Peru. We are currently accepting donations of old computers for our <%= link_to "Computer Drive", "/computer_drive.pdf", :target => '_blank' %> for when we visit Cusco in January.</p>
+          to build a technology program for young women in Cusco, Peru. Check out our curriculum on <a href="http://kubmo.github.io/">Github!</a></p>
 
         <p> Technical skills, education, and a network of female leaders will lead to a strong global community of women
           in technology. There is a clear gender divide in the tech world. But we believe a skill-based education is an
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <%= link_to "Learn more about our curriculum >", "/learn_more.pdf", :target => '_blank' %>
+          <a target="_blank" href="http://kubmo.github.io/">Check out our latest curriculum!</a>
         </div>
       </div>
     </div>
